public/frontend/src/components/search/SearchMap/SearchMap.scss
@import '@/styles/variables.scss';
@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';
@import '~bootstrap/scss/mixins/_breakpoints';

.search-map-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 9999;
  overflow: hidden;
  background-color: white;

  .search-map-feature-preview {
    max-width: 250px;

    @include media-breakpoint-up(sm) {
      max-width: 800px;
    }
  }
}

.search-map-view-controls {
  position: fixed;
  top: 10px;
  left: 10px;
  z-index: 10000;
  padding: 0.5rem;
  border-radius: 4px;

  .search-form {
    margin-bottom: 1em;
  }

  // Prevent issue where features aren't clickable under the controls container
  pointer-events: none;

  input,
  button,
  .clear-button {
    pointer-events: auto;
  }
}

